# Epitech

Tek2/NWP/myTeams/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  formatForMac.sh
Tek2/NWP/myTeams/.github/ISSUE_TEMPLATE/: command.md
Tek2/NWP/myTeams/.github/workflows/: mirroring.yml
Tek2/NWP/myTeams/doc/: DataArchitecture.md  RFC.md
Tek2/NWP/myTeams/libs/myteams/: logging_client.h  logging_server.h
Tek2/NWP/myTeams/src/: CMakeLists.txt
Tek2/NWP/myTeams/src/client/: CMakeLists.txt  args.c  check_uuid.c  client.c  client.h  client_struct.h  error_messages.h  handle_client_select.c  handle_server_select.c  helper.c  main.c  parse_string.c  run.c  send_packet.c  write_u32.c
Tek2/NWP/myTeams/src/client/commands/: CMakeLists.txt  commands.h  commands_info.c  create.c  handle_command.c  help.c  info.c  list.c  login.c  logout.c  messages.c  send.c  subscribe.c  subscribed.c  unsubscribe.c  use.c  user.c  users.c
Tek2/NWP/myTeams/src/client/packet_handlers/: CMakeLists.txt  channel_created.c  channel_list.c  comment_created.c  context_update.c  generic.c  handle_server_packet.c  login.c  logout.c  message_created.c  message_list.c  server_handlers.c  server_packet_handlers.h  subscribed.c  team_created.c  team_info.c  team_list.c  thread_created.c  thread_list.c  unknown_item.c  unsubscribed.c  user_info.c  user_list.c
Tek2/NWP/myTeams/src/common/: CMakeLists.txt  protocol.h
Tek2/NWP/myTeams/src/server/: CMakeLists.txt  cycle.c  destroy.c  destroy_teams.c  find_channel.c  find_messages_list.c  find_peer.c  find_team.c  find_thread.c  find_thread_by_title.c  find_user.c  get_context.c  init.c  main.c  messages_map.c  packet_handlers.h  packet_reply.h  peer.h  poll.c  server.h  socket.c  start.c
Tek2/NWP/myTeams/src/server/items/: CMakeLists.txt  channel.h  comment.h  item.h  message.h  team.h  thread.h  user.h
Tek2/NWP/myTeams/src/server/packet_handlers/: CMakeLists.txt  comment_list.c  create_item.c  get_channels.c  get_messages.c  get_subscribed_teams.c  get_team_info.c  get_team_users.c  get_teams.c  get_user_info.c  get_users.c  handle_packet.c  handlers.c  login.c  logout.c  message.c  set_context.c  subscribe_team.c  thread_list.c  unknown.c  unsubscribe_team.c
Tek2/NWP/myTeams/src/server/packet_reply/: CMakeLists.txt  channel_created.c  channel_list.c  comment_created.c  comment_list.c  context_update.c  error.c  generic.c  login.c  logout.c  message.c  messages_list.c  subscribed.c  team_created.c  team_info.c  team_list.c  team_users_list.c  thread_created.c  thread_list.c  unknown_item.c  unsubscribed.c  user_info.c  user_list.c
Tek2/NWP/myTeams/src/server/peer/: CMakeLists.txt  check_logged_in.c  create.c  create_channel.c  create_comment.c  create_team.c  create_thread.c  destroy.c  init_item_header.c  is_subscribed.c  item_creators.c  item_exists.c  log.c  read_input.c  set_user.c  unset_user.c  write_output.c
Tek2/NWP/myTeams/src/util/: CMakeLists.txt  cbuffer.h  endian.h  hash.h  hash_map.h  leb128.h  my_memrev.c  my_memswap.c  util.h  uuid_util.h  vec.h
Tek2/NWP/myTeams/src/util/cbuffer/: CMakeLists.txt  internal.h  my_cbuffer_get_parts.c  my_cbuffer_init.c  my_cbuffer_pop.c  my_cbuffer_pop_to.c  my_cbuffer_push.c  my_cbuffer_read.c  my_cbuffer_read_to.c  my_cbuffer_rotate.c  my_cbuffer_write.c
Tek2/NWP/myTeams/src/util/endian/: CMakeLists.txt  big_endian_to_be.h  big_endian_to_le.h  little_endian_to_be.h  little_endian_to_le.h
Tek2/NWP/myTeams/src/util/hash/: CMakeLists.txt  internal.h  my_hash_load_from_mem.c  my_hasher_finish.c  my_hasher_init.c  my_hasher_write.c  my_hasher_write_fixed_int.c  my_hasher_write_int.c  my_siphash13_rounds.c
Tek2/NWP/myTeams/src/util/hash_map/: CMakeLists.txt  internal.h  my_calloc.c  my_hash_map_contains.c  my_hash_map_cstr_key.c  my_hash_map_drop.c  my_hash_map_get.c  my_hash_map_hash_key.c  my_hash_map_init.c  my_hash_map_insert.c  my_hash_map_insert_entry.c  my_hash_map_iter.c  my_hash_map_remove.c
Tek2/NWP/myTeams/src/util/leb128/: CMakeLists.txt  decode.c  encode.c  size.c
Tek2/NWP/myTeams/src/util/uuid/: CMakeLists.txt  pair_cmp.c  pair_hash.c  pair_init.c
Tek2/NWP/myTeams/src/util/vec/: CMakeLists.txt  my_vec_change_value.c  my_vec_clear.c  my_vec_copy.c  my_vec_ensure_capacity.c  my_vec_extend_to_length.c  my_vec_free.c  my_vec_init_capacity.c  my_vec_pop.c  my_vec_push.c  my_vec_remove.c  my_vec_reserve.c  my_vec_set_capacity.c  my_vec_shrink_to_fit.c
Tek2/NWP/myTeams/tests/: CMakeLists.txt
Tek2/NWP/myTeams/tests/client/: CMakeLists.txt  tests_trim_string.c
Tek2/NWP/myTeams/tests/client/commands/: CMakeLists.txt  mock_client.c  mock_client.h  tests_handle_command.c  tests_login.c  tests_logout.c
Tek2/NWP/myTeams/tests/server/: CMakeLists.txt
Tek2/NWP/myTeams/tests/server/packets/: CMakeLists.txt  mock_server.c  mock_server.h  tests_get_messages.c  tests_get_teams.c  tests_login.c  tests_logout.c
Tek2/NWP/myTeams/tests/util/: CMakeLists.txt
Tek2/NWP/myTeams/tests/util/cbuffer/: CMakeLists.txt  test_my_cbuffer_get_parts.c  test_my_cbuffer_init.c  test_my_cbuffer_pop.c  test_my_cbuffer_push.c  test_my_cbuffer_read.c  test_my_cbuffer_rotate.c  test_my_cbuffer_write.c
Tek2/NWP/myTeams/tests/util/hash/: CMakeLists.txt  test_my_hash_load_from_mem.c  test_my_hasher_finish.c  test_my_hasher_init.c  test_my_hasher_write.c  test_my_hasher_write_fixed_int.c  test_my_hasher_write_int.c  test_my_siphash13_rounds.c
Tek2/NWP/myTeams/tests/util/hash_map/: CMakeLists.txt  test_my_hash_map_contains.c  test_my_hash_map_drop.c  test_my_hash_map_get.c  test_my_hash_map_init.c  test_my_hash_map_insert.c  test_my_hash_map_iter.c  test_my_hash_map_remove.c
Tek2/Workshop/CMake/: CMakeLists.txt
Tek2/Workshop/CMake/cmake/: FindCriterion.cmake
Tek2/Workshop/CMake/include/: ikea.h
Tek2/Workshop/CMake/lib/: CMakeLists.txt
Tek2/Workshop/CMake/lib/ikea/: CMakeLists.txt  get_furniture.c
Tek2/Workshop/CMake/src/: CMakeLists.txt  hello_world.c
Tek2/Workshop/CMake/tests/: CMakeLists.txt  tests_ikea.c
(+1371 files in other folders)
